@@ -1,7 +1,7 @@
 set(evTools_std_files
   src/code_version.f90
   src/functions.f90
-  src/nagfor.f90  # Needed to compile with nagfor, g95, and F2003 standard - won't run!
+  #src/nagfor.f90  # Needed to compile with nagfor, g95, and F2003 standard - won't run!
   )
 
 set(evTools_plot_files
