@@ -13,7 +13,7 @@ cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
 
 # Set build type. Do this *before* we set the project name:
 if( NOT CMAKE_BUILD_TYPE )
-  set( CMAKE_BUILD_TYPE RelWithDebInfo CACHE STRING
+  set( CMAKE_BUILD_TYPE Release CACHE STRING
     "Choose the type of build, options are: None Debug Release RelWithDebInfo Profile."
     FORCE)
 endif( NOT CMAKE_BUILD_TYPE )
@@ -36,9 +36,9 @@ include( SetCompileOptions )
 get_filename_component( Fortran_COMPILER_NAME ${CMAKE_Fortran_COMPILER} NAME )
 #set( MODULE_DIRECTORY "${CMAKE_SOURCE_DIR}/usr/include/libTheSky/${Fortran_COMPILER_NAME}" )
 #set( LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/usr/lib" )
-set( MODULE_DIRECTORY "${CMAKE_SOURCE_DIR}/mod" )
-set( LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/lib" )
-
+set( MODULE_DIRECTORY "${CMAKE_SOURCE_DIR}/usr/mod" )
+set( LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/usr/lib" )
+set( CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/usr/bin" )
 
 
 
@@ -61,6 +61,23 @@ include( FileList )
 include( CompilerFlags )
 
 
+# Create the file code_version.f90, which contains the svn version number and date:
+if( CREATE_VERSION )
+  
+  # SVN version generator:
+  ADD_CUSTOM_COMMAND(
+    OUTPUT ${CMAKE_SOURCE_DIR}/src/code_version.f90
+    COMMAND cd $(CMAKE_SOURCE_DIR)
+    COMMAND . ${CMAKE_SOURCE_DIR}/code_version.sh $(CMAKE_SOURCE_DIR) ${Fortran_COMPILER_NAME}
+    )
+  
+  # Tell CMake the source won't be available until build time:
+  SET_SOURCE_FILES_PROPERTIES( ${CMAKE_SOURCE_DIR}/src/code_version.f90 PROPERTIES GENERATED 1 )
+
+endif( CREATE_VERSION )
+
+
+
 
 # Create executable targets that don't need PGPlot:
 add_executable( dat2plt  src/dat2plt.f90 ${evTools_std_files} )
@@ -78,7 +95,8 @@ add_executable( plt2obs  src/plt2obs.f90 ${evTools_std_files} )
 add_executable( selplt  src/selplt.f90 ${evTools_std_files} ${evTools_plt_files} )
 
 # Set module directory:
-set_target_properties( dat2plt findplt getgrid grid listmdl listmod listplt makerun mergeplt plt2ce plt2dat plt2obs selplt  PROPERTIES Fortran_MODULE_DIRECTORY ${MODULE_DIRECTORY} )
+set_target_properties( dat2plt findplt getgrid grid listmdl listmod listplt makerun mergeplt plt2ce plt2dat plt2obs selplt 
+  PROPERTIES Fortran_MODULE_DIRECTORY ${MODULE_DIRECTORY} )
 
 
 
@@ -87,32 +105,24 @@ add_executable( plotmdl  src/plotmdl.f90 ${evTools_std_files} ${evTools_mdl_file
 add_executable( plotmdln  src/plotmdln.f90 ${evTools_std_files} )
 add_executable( plotmod  src/plotmod.f90 ${evTools_std_files} )
 add_executable( plotplt  src/plotplt.f90 ${evTools_std_files} ${evTools_plt_files} ${evTools_plot_files} )
-add_executable( plotpltn  src/plotpltn.f90 ${evTools_std_files} ${evTools_plt_files} ${evTools_plot_files} )
-add_executable( plotpltp  src/plotpltp.f90 ${evTools_std_files} )
+
 
 # Set module directory:
-set_target_properties( plotmdl plotmdln plotmod plotplt plotpltn plotpltp  PROPERTIES Fortran_MODULE_DIRECTORY ${MODULE_DIRECTORY} )
+set_target_properties( plotmdl plotmdln plotmod plotplt 
+  PROPERTIES Fortran_MODULE_DIRECTORY ${MODULE_DIRECTORY} )
 
 # Link against PGPlot:
 target_link_libraries( plotmdl ${PGPLOT_LIBRARIES} )
 target_link_libraries( plotmdln ${PGPLOT_LIBRARIES} )
 target_link_libraries( plotmod ${PGPLOT_LIBRARIES} )
 target_link_libraries( plotplt ${PGPLOT_LIBRARIES} )
-target_link_libraries( plotpltn ${PGPLOT_LIBRARIES} )
-target_link_libraries( plotpltp ${PGPLOT_LIBRARIES} )
-
-
-
-#add_executable( map  src/map.f90 )
-#target_link_libraries( map ${LibSUFR_LIBRARIES} ${PGPLOT_LIBRARIES} "libTheSky_shared" "libTheSkyMap_shared" )
-#set_target_properties( map PROPERTIES Fortran_MODULE_DIRECTORY ${MODULE_DIRECTORY} )
-
 
 
 
 # Install to destination:
-#   use DIRECTORY rather than TARGETS to allow include/<fortrancompiler>/
-#install( DIRECTORY usr/
-#  DESTINATION ${CMAKE_INSTALL_PREFIX})
+# - use DIRECTORY rather than TARGETS so that I don't need to specify them all again...
+install( DIRECTORY usr/bin/ 
+    FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE 
+    DESTINATION ${CMAKE_INSTALL_PREFIX}/bin )
 
 
